--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Blog | Akshay Easwaran
+title: Akshay Easwaran
 email: akeaswaran@me.com
 description: > # this means to ignore newlines until "baseurl:"
   Random thoughts and musings.
