first time since 1986
plus some changes to read time

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ aboutPage: true
 markdown: kramdown
 highlighter: rouge
 
-plugins: [jekyll-paginate, jekyll-crosspost-to-medium]
+plugins: [jekyll-paginate]
 paginate: 10
 baseurl:
 domain_name: 'http://akeaswaran.me'
