--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Akshay Easwaran
-description: A software engineer with a mild sports addiction.
-meta_description: "Akshay Easwaran - A software engineer with a mild sports addiction"
+description: A software engineer with a mild Atlanta sports addiction.
+meta_description: "Akshay Easwaran - A software engineer with a mild Atlanta sports addiction"
 
 aboutPage: true
 
